--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,31 @@
-* {
-  box-sizing: border-box;
-}
 
-body, html {
-  height: 100%;
-}
-
-#backgroundimage{
+main{
   width: 100%;
   height: 100%;
+  border: 1px solid blue;
 }
+
+body {
+  background: url('../assets/desktopfridge.png') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 
 #zone{
   border: 1px solid red;
   width: 45%;
-  height: 120%;
+  height: 700px;
   z-index: 10;
-  position: absolute;
+  position: relative;
   top: 3%;
   left: 48.5%;
 }
 
+@media screen and (max-width: 1100px){
+  #zone{
+    width: 45%;
+  }
+}
