--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 main{
   width: 100%;
   height: 100%;
-  border: 1px solid blue;
+
 }
 
 body {
@@ -15,13 +15,21 @@ body {
 
 
 #zone{
-  border: 1px solid red;
+
   width: 45%;
   height: 700px;
   z-index: 10;
   position: relative;
   top: 3%;
   left: 48.5%;
+}
+
+p{
+  display: inline;
+  color: red;
+  font-size: 1.75em;
+  font-family: 'Londrina Solid', cursive;
+  text-shadow: 1px -1px black;
 }
 
 @media screen and (max-width: 1100px){
