--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,13 @@ p{
     width: 45%;
   }
 }
+
+@media screen and (max-width: 1000px){
+  body{
+    background: url('../assets/mobilefridge.png') no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+}
