responsive drag and drop functionality complete

--- a/vanilla/css/style.css
+++ b/vanilla/css/style.css
@@ -44,4 +44,10 @@ p{
     -o-background-size: cover;
     background-size: cover;
   }
+
+  #zone{
+    border: 1px solid black;
+    width: 90%;
+    left: 5%;
+  }
 }
