--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,14 +2,13 @@
 <html>
     <head>
         <title>Fridgemag.Net</title>
-        <link rel="stylesheet" href="./css/reset.css">
+        <link rel="stylesheet" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
 
     <body>
         <header>
-            
         </header>
 
         <main>
