--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,14 +45,16 @@ p{
   }
 
   #zone{
-    width: 90%;
-    left: 5%;
+    height: 100vh;
+    width: 90vw;
+    left: 5vw;
   }
 }
 
 @media screen and (max-width: 600px){
   #zone{
-    width: 98%;
-    left: 1%;
+    height: 100vh;
+    width: 98vw;
+    left: 1vw;
   }
 }
