added position relative to body of media query

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -47,8 +47,8 @@ p{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-
-    overflow: hidden;
+    position: relative;
+    overflow-y: hidden;
   }
 
   #zone{
