--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta name="viewport" content="user-scalable=no, width=device-width, height=device-height, initial-scale=1.0" />
+        <meta name="apple-mobile-web-app-capable" content="yes" />
         <title>Fridgemag.Net</title>
         <link rel="stylesheet" href="css/reset.css">
         <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
