--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,15 +14,16 @@
         </header>
 
         <main>
-                <div id ="zone"></div>
+                <div id ="zone">
+         
+
+                </div>
         </main>
 
         <footer>
         </footer>
-
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-        crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
         <script src="./app.js"></script>
     </body>
 </html>
