--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,24 +20,23 @@ body {
 
 
 #zone{
-  width: 45%;
-  height: 700px;
-  z-index: 10;
+  width: 45vw;
+  height: 100vh;
   position: relative;
-  top: 3%;
-  left: 48.5%;
-  border: 1px solid red;
+  top: 3vh;
+  left: 49vw;
+  border: 1px solid black;
 }
 
 p{
-  display: inline;
+  position: absolute;
   font-size: 1.75em;
   font-family: 'Courier New', Courier, monospace;
 }
 
 @media screen and (max-width: 1100px){
   #zone{
-    width: 45%;
+    width: 50vw;
   }
 }
 
@@ -54,6 +53,7 @@ p{
     height: 100vh;
     width: 90vw;
     left: 5vw;
+    border: none;
   }
 }
 
